commit last changes (4)

--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ mypicture.center{
     margin-right: auto;
 
 }
+about_table.center{
+    margin-left: 600px;
+    margin-right: auto;
+}
 h5{
 
 }
